tests/ui/parser/misspelled-keywords/async-move.stderr
error: expected one of `move`, `|`, or `||`, found `Move`
  --> $DIR/async-move.rs:4:11
   |
LL |     async Move {}
   |           ^^^^ expected one of `move`, `|`, or `||`
   |
help: write keyword `move` in lowercase
   |
LL |     async move {}
   |           ~~~~

error: aborting due to 1 previous error

